chore: Remove redundant Java options